# todotool

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  UPDATE_PROTOCOL.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
server/: database.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: database.rs  lib.rs
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/components/TitleBar/: TitleBar.module.css  TitleBar.tsx
src/renderer/src/components/TodoForm/: TodoForm.module.css  TodoForm.tsx
src/renderer/src/components/TodoList/: TodoItem.tsx  TodoList.module.css  TodoList.tsx
src/renderer/src/components/Toolbar/: Toolbar.module.css  Toolbar.tsx
src/renderer/src/hooks/: useTheme.ts  useTodos.ts
src/renderer/src/styles/: global.css  theme.ts
src/renderer/src/types/: todo.ts
